welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: too many arguments for method baisseBrosse: ()Unit
baisseBrosse(1)
            ^Program:4: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:7: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:10: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:12: error: too many arguments for method leveBrosse: ()Unit
leveBrosse(1)
          ^Program:13: error: too many arguments for method droite: ()Unit
droite(1)
      ^