welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse(1)
avance(1)
avance(1)
droite(1)
avance(1)
avance(1)
droite(1)
avance(1)
avance(1)
droite(1)
avance(1)
leveBrosse(1)
droite(1)
avance(1)

